fixes mistype in Java Experimental Features